hphp/hack/test/typecheck/array/disallow_empty_varray_where_dict_like_array_is_required.php
<?hh // partial

function test(): array<string, string> {
  return varray[];
}
